# cobra-nickel

./: .gitignore  CMakeLists.txt  README.md
include/: Log.h  Logger.h
include/CobraNickel/: ConsoleOutputSource.h  FileOutputSource.h  Level.h  Logger.h  OutputSource.h
src/: ConsoleOutputSource.cpp  FileOutputSource.cpp  Log.cpp  Logger.cpp  OutputSource.cpp
test/: CMakeLists.txt
test/cout/: CMakeLists.txt
test/cout/src/: main.cpp
test/ofstream/: CMakeLists.txt
test/ofstream/src/: main.cpp
